added OTP generation and validation APIs
