# middleware/patientware/dto.go
@@ -1,11 +1,0 @@
-package patientware
-
-type DefaultResponse struct {
-	Message string `json:"message,omitempty"`
-}
-
-type LoginCredentials struct {
-	Email     string `json:"email" binding:"required,email"`
-	Password  string `json:"password" binding:"required"`
-	IPAddress string
-}
